// Copyright 2019 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package recipe_modules.build.code_coverage;

message InputProperties {
  // GS bucket to which coverage data should be saved.
  // Defaults to code-coverage-data.
  string coverage_gs_bucket = 1;
  // Whether Clang coverage is enabled.
  bool use_clang_coverage = 2;
  // Whether Java coverage is enabled.
  bool use_java_coverage = 3;
  // List of test types to process in builder.
  repeated string coverage_test_types = 4;
  // The key to get corresponding excluded file pattern.
  string coverage_exclude_sources = 5;
  // Whether JavaScript coverage is enabled.
  bool use_javascript_coverage = 6;
  // Hash of a past commit to be used for referenced coverage.
  string coverage_reference_commit = 7;
  // Determines if coverage data is to be exported to zoss.
  bool export_coverage_to_zoss = 8;
  // Determines if blame list data should be generated for files or not
  bool generate_blame_list = 9;
}
